# Jay-ai-learning-lab

./: .gitignore  .gitmodules  AGENTS.md  README.md  roadmap.md  to do list.md  历史.md
Excalidraw/: Drawing 2026-06-23 09.23.55.excalidraw.md
archives/: README.md
docs/: agent-engineering-checklist.md  ai-operating-manual.md
docs/superpowers/plans/: 2026-06-21-algorithm-pattern-library.md  2026-06-21-learning-lab-readme.md  2026-06-21-learning-system-v2-migration.md  2026-06-21-notes-navigation.md
docs/superpowers/specs/: 2026-06-21-algorithm-pattern-library-design.md  2026-06-21-learning-lab-readme-design.md  2026-06-21-learning-system-v2-design.md  2026-06-21-notes-navigation-design.md
incubator/: AI Learning OS.md  Learning Flow Automation.md  Minimal SW Agent.md  Roadmap.md
knowledge-review/: README.md  generate_daily_review.py
knowledge-review/content/2026-06-23/: 2026-06-23-python-dict-get与items.md  2026-06-23-python-read-readline-readlines与rstrip.md  2026-06-23-python-with-open与文件模式.md  2026-06-23-复习清单.md
logs/: README.md
notes/: README.md
notes/book notes/: Hands-On Large Language Models(Jay Alammar, Maarten Grootendorst).md
projects/math-for-rag-labs/: .gitignore  README.md  pyproject.toml
projects/math-for-rag-labs/notebooks/: 01-vector-similarity.ipynb  Linear Algebra and Machine Learning.ipynb  matrix_calculation.ipynb
summary/: README.md
summary/phases/: #  Phase I 总结.md
summary/weekly/: 0 week review.md
templates/: algorithm-note.md  daily-log.md  development-task.md  phase-summary.md  weekly-summary.md
(+49 files in other folders)
