[project]
name = "math-for-rag-labs"
version = "0.1.0"
description = "Small NumPy and PyTorch labs for RAG, Transformer, and LLM math foundations."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "torch>=2.7.0",
]

[tool.uv]
package = false
